fixed vertical-align problem

--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -20,6 +20,7 @@ nav.navbar{
 }
 .navbar-brand {
     margin-right: 1rem;
+    display: flex;
 }
 .mundb-inline{
     display:inline;
